r1.2-beta2 (13.09.2018) Release, dedicated to my birthday

  * Add BEEP command
  * Add configurable real numbers precision
  * Add LEFT$ function
  * RND function has optional parameter
  * Fix bug with concatenation of sequential identifiers
  * Fix bug with unnecessary output
  * Fix bug with INPUT command in multioperator lines

r1.2-beta2 (21.06.2018)

  * Add ON .. GOTO control structure
  * FOR .. NEXT implementation update: loop body can modify control variable,
      it's possible to GOTO from nested FOR loop body to outer loop
  * Logical operators presedence become lower then arithmetic ones.
  * Add INPUT with printed text feature (INPUT "Message"; VAR1, VAR2..)
  * Add gfx_serial implementation: graphics drawing protocol over serial VT100/ANSI connection
  * Fix bug with multioperator strings with FOR ..  TO .. STEP operator
  * Add parameterless user defined functions DEF FNx
  * Add hyperbolic functions to math module

r1.2-beta1 (06.06.2018)

  * Add STR$ function
  * Add optional errror message strings
  * Add rudimentary localisation support (currently English, Russian)
  * Fix AUTOCAPITALIZE option
  * Some code size optimizations in matrix handling routines

r1.1 (14.12.2017) Release, dedicated to the Russian Constitution Day

  * Fix multiterminal mode
  * Add binary form to store real constants in memory

r1.1-rc1 (24.11.2017)

  * Fix regression in command mode
  * Fix some Arduino DUE incompatabilities
  * FOR loop fixed according to Minimal BASIC standart
  * Unary operators priority reduced
  * Add MAT READ implementation

r1.1-beta3 (15.11.2017) - Release, dedicated to Proclamation of the Republic in Brasil

  * Add DATA, READ, RESTORE support
  * Add conditional setting of printing zones width
  * Fix matrix operations in IF ... THEN statement
  * Remove limitation on functions name length
  * Fix string operations bug

r1.1-beta2 (29.10.2017) - Release, dedicated to the World Stroke Day

  * Add LiquidCrystal library output support