@@ -54,7 +54,7 @@ FunctionBlock::getFunction(const char *name) const
 	if (((result = _getFunction(name)) == NULL) &&
 	    _next != nullptr)
 		result = _next->getFunction(name);
-	return (result);
+	return result;
 }
 
 FunctionBlock::command
@@ -64,7 +64,7 @@ FunctionBlock::getCommand(const char *name) const
 	if (((result = _getCommand(name)) == nullptr) &&
 	    _next != nullptr)
 		result = _next->getCommand(name);
-	return (result);
+	return result;
 }
 
 FunctionBlock::function
@@ -110,9 +110,9 @@ FunctionBlock::general_func(Interpreter &i, _funcReal f)
 	    v.type == Parser::Value::REAL) {
 		v = (*f)(Real(v));
 		i.pushValue(v);
-		return (true);
+		return true;
 	} else
-		return (false);
+		return false;
 }
 #endif
 
@@ -149,4 +149,4 @@ FunctionBlock::getIntegerFromStack(Interpreter &i, INT &num)
 
 #undef _Integer
 
-}
+} // namespace BASIC
